--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "predeploy": "npm run build && cp dist/index.html dist/404.html",
+    "deploy": "gh-pages -d dist -b gh-pages",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -24,4 +25,5 @@
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
+
 }
